changes for camera-roll

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -10,6 +10,8 @@ target 'challenger' do
 
   pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
 
+  pod 'react-native-cameraroll', :path => '../node_modules/@react-native-community/cameraroll'
+
   target 'challengerTests' do
     inherit! :complete
     # Pods for testing
