--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/cameraroll": "^4.0.4",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.7.2",
     "@react-navigation/stack": "^5.8.0",
     "@types/react-redux": "7.1.9",
     "react": "16.13.1",
     "react-native": "0.63.2",
+    "react-native-button": "^3.0.1",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.9.0",
